# homework-definitions

./: README.md  homework.yml
.github/workflows/: check_homework.yml
homework/: homework.yml
inject/homework_4/validation_tests/: CMakeLists.txt  test_string_split.cpp
inject/homework_5/validation_tests/: CMakeLists.txt  drawer_test.cpp  image_test.cpp  pixelate_image_test.cpp  pixelate_test.cpp  pixelated_image_test.cpp  stb_image_data_view_test.cpp  stb_image_test.cpp
